# DEMO3-PRESENTATION

./: .gitignore  404.html  Makefile  README.md  graphics.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
architecture-diagram/: index.html
config/: mkdocs.yml
deploy-evidence/: index.html
disaster-recovery/: index.html
docs/: architecture-diagram.md  deploy-evidence.md  disaster-recovery.md  flujo-operacional.md  gitea-enhance-old.md  gitea-enhance.md  guion-disertacion-dr.md  index.md  resumen-ejecutivo.md
docs/recursos/: graphics.md
docs/recursos/ansible-demogitea/: CONFIGURACION_AUTOMATICA.md
docs/recursos/tf-az-infra-demogitea/: JENKINS_SETUP.md  README.md
flujo-operacional/: index.html
gitea-enhance/: index.html
guion-disertacion-dr/: index.html
search/: search_index.json
